--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,6 +1,8 @@
+@import '../../styles/variables.scss';
+
 .header {
     width: calc(100% - 20px);
-    height: 60px;
+    height: $header-height;
     background: lighten($color: cornflowerblue, $amount: 20);
 
     display: flex;
