--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .header {
-    width: calc(100% - 20px);
+    width: 100%;
     height: $header-height;
     background: lighten($color: cornflowerblue, $amount: 20);
 
