--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -3,7 +3,7 @@
 $footer-padding: 10px;
 
 .page {
-    height: calc(100vh - #{$header-height + $footer-height + $footer-padding * 2});
+    height: calc(100vh - #{$header-height + $footer-height});
 
     padding: $footer-padding;
 }
@@ -18,44 +18,5 @@ a {
     &,
     &:visited {
         color: blue;
-    }
-}
-
-.auth {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    height: 100vh;
-
-    &__form {
-        box-sizing: border-box;
-
-        min-width: 250px;
-        padding: 15px;
-        border-radius: 4px;
-
-        background: lighten($color: lightblue, $amount: 15);
-
-        display: flex;
-        flex-direction: column;
-
-        input {
-            padding: 4px 8px;
-            margin: 4px;
-
-            font-size: 16px;
-
-            outline-color: lightgreen;
-        }
-    }
-
-    &__error {
-        font-size: 12px;
-        text-align: center;
-        color: red;
-
-        margin: 0;
-        margin-top: 5px;
     }
 }
