--- a/src/pages/users/index.scss
+++ b/src/pages/users/index.scss
@@ -1,62 +1,66 @@
 .users {
-    margin-top: 20px;
+	margin: 20px auto;
+	margin-bottom: 0;
 
-    &__item {
-        display: inline-block;
-        margin: 10px;
+	max-width: 800px;
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
 
-        text-align: center;
+	&__item {
+		display: inline-block;
+		margin: 10px;
 
-        &-icon {
-            position: relative;
-            display: inline-block;
-            font-size: 0;
+		text-align: center;
+
+		&-icon {
+			position: relative;
+			display: inline-block;
+			font-size: 0;
+		}
+
+		&-icon-avatar {
+			width: 90px;
+			height: 90px;
+			border-radius: 50%;
+
+			&:hover {
+				filter: brightness(1.03);
+			}
+		}
+
+		&-name {
+			margin-top: 8px;
+
+			font-size: 14px;
+		}
+
+		&_online,
+		&_offline {
+			position: absolute;
+
+			width: 8px;
+			height: 8px;
+
+			right: 0px;
+			bottom: 0px;
+
+			border-radius: 50%;
+		}
+
+		&_online {
+			background: green;
+		}
+
+		&_offline {
+			background: red;
+		}
+	}
+
+	@media screen and (max-width: 600px) {
+        &__item {
+            width: 25%;
+            min-width: 125px;
         }
-
-        &-icon-avatar {
-            width: 90px;
-            height: 90px;
-            border-radius: 50%;
-
-            &:hover {
-                filter: brightness(1.03);
-            }
-        }
-
-        &-name {
-            margin-top: 8px;
-
-            font-size: 14px;
-        }
-
-        &_online,
-        &_offline {
-            position: absolute;
-
-            width: 8px;
-            height: 8px;
-
-            right: 0px;
-            bottom: 0px;
-
-            border-radius: 50%;
-        }
-
-        &_online {
-            background: green;
-        }
-
-        &_offline {
-            background: red;
-        }
-    }
-}
-
-.list {
-    margin-top: 15px;
-
-    &__item {
-        display: block;
-        padding: 5px 0;
-    }
+	}
 }
