--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,27 +1,104 @@
-@import '../../styles/variables.scss';
+@import "../../styles/variables.scss";
 
 .header {
-    width: 100%;
-    height: $header-height;
-    background: lighten($color: cornflowerblue, $amount: 20);
+	width: 100%;
+	height: $header-height;
+	background: lighten($color: cornflowerblue, $amount: 20);
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 
-    padding: 0 10px;
+	padding: 0 10px;
 
-    &__logo {
-        font-size: 17px;
-        font-weight: 500;
-        letter-spacing: .5px;
+	&__logo {
+		font-size: 17px;
+		font-weight: 500;
+		letter-spacing: 0.5px;
+
+		display: flex;
+		align-items: center;
+	}
+
+	&__login {
+		display: inline-block;
+
+		&::first-letter {
+			color: red;
+		}
+	}
+
+	&__burger {
+		width: 35px;
+		height: 35px;
+
+		position: relative;
+
+		padding: 5px;
+		margin-right: 4px;
+		top: -1px;
+
+		cursor: pointer;
+	}
+}
+
+.sidebar {
+    padding: 25px;
+    z-index: 1;
+    // padding-top: 60px;
+	box-sizing: border-box;
+
+	width: calc(100% - 60px);
+	height: 100%;
+	background: rgba(10, 10, 10, 0.2);
+	background: #373a47;
+	position: absolute;
+	transform: translateX(calc(-100% - 10px));
+
+	top: 0;
+	transition: 0.5s all;
+
+	&_opened {
+		transform: translateX(-10px);
+    }
+    
+    &__content {
+        height: calc(100% - 50px);
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
-    &__login {
-        display: inline-block;
-
-        &::first-letter {
-            color: red;
-        }
+    .btn {
+        margin: 10px 0;
     }
+
+	&__close {
+		width: 30px;
+		height: 30px;
+		float: right;
+	}
+
+	&__header {
+		height: 40px;
+	}
+}
+
+.overlay {
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	transition: .6s .1s opacity;
+	opacity: 0;
+	transform: translateY(-100%);
+
+	background-color: rgba(100, 100, 100, 0.25);
+	position: fixed;
+
+	&_opened {
+        opacity: 1;
+        transform: none;
+	}
 }
