--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -44,9 +44,11 @@
 .sidebar {
 	padding: 25px;
 	padding-top: 18px;
-    z-index: 1;
-    // padding-top: 60px;
+	z-index: 1;
+	// padding-top: 60px;
 	box-sizing: border-box;
+
+	max-width: 300px;
 
 	width: calc(100% - 60px);
 	height: 100%;
@@ -60,20 +62,20 @@
 
 	&_opened {
 		transform: translateX(-10px);
-    }
-    
-    &__content {
-        height: calc(100% - 50px);
+	}
 
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
+	&__content {
+		height: calc(100% - 50px);
 
-    .btn {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+	}
+
+	.btn {
 		margin: 10px 0;
 	}
-	
+
 	a:hover {
 		text-decoration: none;
 	}
@@ -82,6 +84,8 @@
 		width: 30px;
 		height: 30px;
 		float: right;
+
+		cursor: pointer;
 	}
 
 	&__header {
@@ -94,7 +98,7 @@
 	right: 0;
 	bottom: 0;
 	top: 0;
-	transition: .6s .1s opacity;
+	transition: 0.6s 0.1s opacity;
 	opacity: 0;
 	transform: translateY(-100%);
 
@@ -102,7 +106,7 @@
 	position: fixed;
 
 	&_opened {
-        opacity: 1;
-        transform: none;
+		opacity: 1;
+		transform: none;
 	}
 }
