--- a/src/components/Overlay/index.scss
+++ b/src/components/Overlay/index.scss
@@ -3,15 +3,17 @@
 	right: 0;
 	bottom: 0;
 	top: 0;
-	transition: 0.5s 0.15s opacity linear;
+	transition: .4s .05s opacity linear;
 	opacity: 0;
-	transform: translateY(-100%);
 
-	background-color: rgba(100, 100, 100, 0.3);
+	background-color: rgba(100, 100, 100, .35);
+	opacity: 0;
+	pointer-events: none;
 	position: fixed;
 
 	&_opened {
 		opacity: 1;
-		transform: none;
+		pointer-events: all;
+		transform: translateY(0);
 	}
 }
