--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -7,6 +7,8 @@
 
 	padding: 0 10px;
 
+	border-bottom: 1px solid lighten($color: cornflowerblue, $amount: 18);
+
 	&__logo {
 		font-size: 17px;
 		font-weight: 500;
